--- a/.env.example
+++ b/.env.example
@@ -1,48 +1,16 @@
-# Domain Configuration
-DOMAIN=crawl4ai.yourdomain.com
+# Docker Image
+IMAGE=unclecode/crawl4ai:latest
+TAG=latest
 
-# Security Keys (generate these using the generate_secrets.py script)
-JWT_SECRET_KEY=your-generated-jwt-secret-key-here
-REDIS_PASSWORD=your-strong-redis-password-here
+# OpenAI
+OPENAI_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# Admin credentials for Playground and Admin API
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=your-secure-admin-password
+# Anthropic
+# ANTHROPIC_API_KEY=your-anthropic-key
 
-# Playground Basic Auth (generate using htpasswd format: username:hashed_password)
-# Example: admin:$2y$10$... (use generate_secrets.py to create this)
-PLAYGROUND_AUTH=admin:$2y$10$...
-
-# API Keys Configuration (JSON format)
-# Generate secure keys using the generate_secrets.py script
-API_KEYS_CONFIG='{
-  "prod-001": {
-    "name": "Production API Key 1",
-    "key": "sk-prod-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
-    "rate_limit": "1000/minute",
-    "scopes": ["crawl", "screenshot", "pdf", "md"],
-    "enabled": true
-  },
-  "prod-002": {
-    "name": "Production API Key 2",
-    "key": "sk-prod-yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy",
-    "rate_limit": "500/minute",
-    "scopes": ["crawl"],
-    "enabled": true
-  },
-  "dev-001": {
-    "name": "Development API Key",
-    "key": "sk-dev-zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz",
-    "rate_limit": "100/minute",
-    "scopes": ["crawl", "screenshot"],
-    "enabled": true
-  }
-}'
-
-# Resource Limits
-MEMORY_LIMIT=8G
-CPU_LIMIT=4
-MAX_CONCURRENT_CRAWLS=10
-
-# Logging
-LOG_LEVEL=INFO
+# Other providers as needed
+DEEPSEEK_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# GROQ_API_KEY=your-groq-key
+# TOGETHER_API_KEY=your-together-key
+# MISTRAL_API_KEY=your-mistral-key
+# GEMINI_API_TOKEN=your-gemini-token
