--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,7 @@ services:
   nginx:
     image: nginx:alpine
     volumes:
-      - ../files/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ../files/nginx/.htpasswd:/etc/nginx/.htpasswd:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     networks:
       - internal
     depends_on:
