--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
     image: nginx:alpine
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ../files/nginx/.htpasswd:/etc/nginx/.htpasswd:ro # Should be added as volume file mount in advanced menu with file path nginx/.htpasswd and password content
     networks:
       - internal
     depends_on:
